# AutoDRIVE-AVLDC

./: README.md  autodrive.py  opencav_aeb.py
AutoDRIVE-AVLDC/: AutoDRIVE-AVLDC.proj
AutoDRIVE-AVLDC-Integration/AutoDRIVE-AVLDC-Integration_files/modeling/: avldc.py  opencav.py
AutoDRIVE-AVLDC/AutoDRIVE-AVLDC_files/: AutoDRIVE.elem
AutoDRIVE-AVLDC/AutoDRIVE-AVLDC_files/modeling/: avldc.py  opencav.py
aeb_ros/aeb_function/: CMakeLists.txt
aeb_ros/aeb_function/config/: ros.yaml
aeb_ros/aeb_function/launch/: aeb_emulation.launch  aeb_simulation.launch
aeb_ros/aeb_function/rviz/: aeb_function.rviz
aeb_ros/aeb_function/scripts/: aeb_emulation.py  aeb_simulation.py
aeb_ros/autodrive_opencav/: CMakeLists.txt
aeb_ros/autodrive_opencav/autodrive_opencav/: bridge.py  config.py
aeb_ros/autodrive_opencav/launch/: simulator_bringup_rviz.launch  simulator_teleop.launch
aeb_ros/autodrive_opencav/scripts/: server.py  teleop.py
aeb_ros/object_detector/: README.md
aeb_ros/object_detector/boost/: b2
autodrive_avldc_cosim/autodrive_avldc_cosim_files/modeling/: aeb_emulation.py  aeb_stimulation.py  autodrive.py  avldc.py  opencav.py
autodrive_avldc_sim/: .fs.xml  autodrive_avldc_sim.proj
autodrive_avldc_sim/autodrive_avldc_sim_files/modeling/: autodrive.py  avldc.py  opencav.py
autodrive_avldc_vil/opencav/aeb_function/: CMakeLists.txt  package.xml
autodrive_avldc_vil/opencav/aeb_function/launch/: opencav_aeb.launch
autodrive_avldc_vil/opencav/aeb_function/scripts/: opencav_aeb.py
docs/: DRIVINGCUBE Signals.xlsx  Model.CONNECT Python Module.docx
(+140 files in other folders)
